[package]
name = "axum-test-helper"
version = "0.4.0"
edition = "2021"
categories = ["development-tools::testing"]
description = "Extra utilities for axum"
homepage = "https://github.com/cloudwalk/axum-test-helper"
keywords = ["axum", "test", "test-framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudwalk/axum-test-helper"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
http = "1.2.0"
http-body = "1.0.1"
bytes = "1.9.0"
tower = "0.5.2"
tower-service = "0.3.3"
serde = "1"
tokio = "1"
hyper = "1"

[dev-dependencies]
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[features]
default = ["withtrace"]
cookies = ["reqwest/cookies"]
withtrace = []
withouttrace = []
